Completed basic structure

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
   <header>
-    Andrew Smith
+    <p class="name">Andrew Smith</p>
     <nav>
-      <ul>
+      <ul> 
         <li>
           <a href="#about">About</a>
         </li>
@@ -31,6 +31,15 @@
       </ul>
     </nav>
   </header>
+  <main>
+    <section id="about"></section>
+    <section id="work"></section>
+    <section id="play"></section>
+    <section id="contact"></section>
+  </main> 
+  <footer>
+    Copyright &copy; 2020 | <a href="mailto:andrew.c.smith289@gmail.com" target="_blank">Andrew Smith</a>
+  </footer>
 </body>
 
 </html>
