Added splash section with quote

--- a/index.html
+++ b/index.html
@@ -7,36 +7,74 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Andrew Smith</title>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <script src="../js/main.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,500,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body>
   <header>
     <p class="name">Andrew Smith</p>
     <nav>
-      <ul> 
+      <div class="collapse"><i class="fa fa-bars"></i></div>
+      <ul>
         <li>
           <a href="#about">About</a>
         </li>
         <li>
-          <a href="#work">Work</a> 
+          <a href="#work">Work</a>
         </li>
         <li>
-          <a href="#play">Play</a> 
+          <a href="#play">Play</a>
         </li>
         <li>
-          <a href="#contact">Contact</a> 
+          <a href="#contact">Contact</a>
         </li>
       </ul>
     </nav>
   </header>
   <main>
-    <section id="about"></section>
-    <section id="work"></section>
-    <section id="play"></section>
-    <section id="contact"></section>
-  </main> 
+    <section class="splash">
+      <blockquote cite>We sit in the mud... and reach for the stars.</blockquote>
+      - <cite><a href="https://en.wikipedia.org/wiki/Ivan_Turgenev" target="_blank">Ivan Turgenev</a></cite>
+    
+    </section>
+    <section id="about">
+      <h1>About</h1>
+      <p>
+        Hi, I'm Andrew!
+      </p>
+    </section>
+    <section id="work">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+      totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+      explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
+      dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit
+      amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
+      aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
+      laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate
+      velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+    </section>
+    <section id="play">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+      totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+      explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
+      dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit
+      amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
+      aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
+      laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate
+      velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+    </section>
+    <section id="contact">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+      laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
+      sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
+      magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
+      sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
+      aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
+      laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate
+      velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+    </section>
+  </main>
   <footer>
     Copyright &copy; 2020 | <a href="mailto:andrew.c.smith289@gmail.com" target="_blank">Andrew Smith</a>
   </footer>
