Added styling and added gulp

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <script src="../js/main.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,500,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/7d46686d17.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -39,40 +38,229 @@
     <section class="splash">
       <blockquote cite>We sit in the mud... and reach for the stars.</blockquote>
       - <cite><a href="https://en.wikipedia.org/wiki/Ivan_Turgenev" target="_blank">Ivan Turgenev</a></cite>
-    
     </section>
     <section id="about">
-      <h1>About</h1>
-      <p>
-        Hi, I'm Andrew!
-      </p>
+      <h1>Hi, I'm Andrew!</h1>
+      <div class="container">
+
+        <div class="intro-container">
+          <div class="brand-container">
+            <img src="images/head.png" width=128 height=128 class="headshot" alt="Andrew Smith headshot cartoon">
+            <ul class="social-links">
+              <li>
+                <a href="https://github.com/andrewsmith289" target="_blank">
+                  <i aria-hidden="true" class="fab fa-github" title="Find me on Github"></i>
+                  <span class="sr-only">Find me on Github</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/andrewsmith22/" target="_blank">
+                  <i aria-hidden="true" class="fab fa-linkedin" title="Find me on LinkedIn"></i>
+                  <span class="sr-only">Find me on LinkedIn</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://twitter.com/AndrewCSmith289" target="_blank">
+                  <i aria-hidden="true" class="fab fa-twitter" title="Find me on Twitter"></i>
+                  <span class="sr-only">Find me on Twitter</span>
+                </a>
+              </li>
+              <li>
+                <a href="mailto:andrew.c.smith289@gmail.com" target="_blank">
+                  <i aria-hidden="true" class="fas fa-envelope" title="Send me an email"></i>
+                  <span class="sr-only">Send me an email</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="intro">
+            <div>
+              <p>
+                I'm a passionate web developer from the true North who is always looking for the next challenge. Please
+                see
+                the
+                lists below to see a collection of my work.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-    <section id="work">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-      totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-      explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
-      dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit
-      amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
-      aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
-      laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate
-      velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+    <section id="skills">
+      <h1>My Skills</h1> 
+      <div class="container">
+        <ul>
+          <li>HTML5</li>
+        </ul>
+        <ul>
+          <li>CSS3</li>
+        </ul>
+      </div>
     </section>
-    <section id="play">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-      totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-      explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
-      dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit
-      amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
-      aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
-      laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate
-      velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+    <section id="work">
+      <h1>My Work</h1>
+      <div class="container">
+        <div class="lists">
+          <div class="lists__code">
+            <h2><i class="fab fa-github"></i>&nbsp;Code</h2>
+            <ul>
+              <li>
+                <a href="https://github.com/andrewsmith289/wp-encrypted-submission" target="_blank">
+                  WordPress Encrypted User Submissions <i class="fas fa-external-link-alt"></i>
+                </a>ß
+              </li>
+              <li>
+                <a href="https://github.com/andrewsmith289/wp-python-pos" target="_blank">
+                  Python Point of Sale System <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                MetalPrint Photo Manager
+                <a href="https://github.com/andrewsmith289/mp-photo-manager" target="_blank">
+                  Plugin <i class="fas fa-external-link-alt"></i>
+                </a>
+                &
+                <a href="https://github.com/andrewsmith289/mp-theme-child" target="_blank">
+                  Theme <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/andrewsmith289/waltersgreen" target="_blank">
+                  WaltersGreen <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/andrewsmith289/Newsletter-Composer" target="_blank">
+                  Newsletter Composer <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/andrewsmith289/wp-wc-orders-view-enhancement" target="_blank">
+                  WooCommerce Orders View Enhancement <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/andrewsmith289/wp-wc-qr-system" target="_blank">
+                  WooCommerce Order QR Generator <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="lists__past-clients">
+            <h2><i class="fas fa-users"></i>&nbsp;Past Clients</h2>
+            <ul>
+              <li>
+                <a href="https://bluemoth.com" target="_blank">
+                  Blue Moth Creative <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                <a href="http://aurorastrategy.com/" target="_blank">
+                  Aurora Strategy Group <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://pioneersgallery.ca/" target="_blank">
+                  Pioneers Gallery <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://thepeachgallery.com/" target="_blank">
+                  The Peach Gallery <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://thepeachgallery.com/" target="_blank">
+                  National Construction Cleaners <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://camoessquare.com/" target="_blank">
+                  Camões Square Toronto <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                <a href="http://voncrippon.com/" target="_blank">
+                  Von Crippon <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                The Portuguese Canadian Walk of Fame
+              </li>
+            </ul>
+          </div>
+          <div class="lists__websites">
+            <h2><i class="fas fa-globe-americas"></i>&nbsp;Websites</h2>
+            <ul>
+              <li>
+                <a href="https://musing-noyce-bfddd4.netlify.com/" target="_blank">
+                  WaltersGreen <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://codepen.io/andrewcsmith289/full/PowKLjj" target="_blank">
+                  Example Landing Page <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://codepen.io/andrewcsmith289/full/gObvGVE" target="_blank">
+                  Example Documentation Page <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="lists__emails">
+            <h2><i class="fas fa-envelope"></i>&nbsp;Emails</h2>
+            <ul>
+              <li>
+                <a href="./emails/canada-day.html" target="_blank">
+                  Canada Day Sale <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                <a href="./emails/happy-holidays.html" target="_blank">
+                  Holiday Sale <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+              <li>
+                <a href="./emails/boxing-day.html" target="_blank">
+                  Boxing Day Sale <i class="fas fa-external-link-alt"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </section>
-    <section id="contact">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-      laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
-      sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-      magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
-      sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
-      aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
-      laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate
-      velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+    <section id="play">
+      <h1>Play</h1>
+      <div class="container">
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+        explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
+        magni
+        dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit
+        amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
+        aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
+        laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate
+        velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+      </div>
+    </section>
+    <section id="contact">
+      <h1>Contact</h1>
+      <div class="container">
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+        dicta
+        sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+        consequuntur
+        magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
+        sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
+        magnam
+        aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
+        laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate
+        velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+      </div>
     </section>
   </main>
   <footer>
