--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Andrew Smith</title>
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-  <script src="../js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
+  <script src="js/combined.js"></script>
+  <!-- <script src="../js/stars.js"></script> -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,500,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  
   <script src="https://kit.fontawesome.com/7d46686d17.js" crossorigin="anonymous"></script>
+  
 </head>
 
 <body>
@@ -35,7 +38,7 @@
     </nav>
   </header>
   <main>
-    <section class="splash">
+    <section id="splash">
       <blockquote cite>We sit in the mud... and reach for the stars.</blockquote>
       - <cite><a href="https://en.wikipedia.org/wiki/Ivan_Turgenev" target="_blank">Ivan Turgenev</a></cite>
     </section>
@@ -76,10 +79,7 @@
           <div class="intro">
             <div>
               <p>
-                I'm a passionate web developer from the true North who is always looking for the next challenge. Please
-                see
-                the
-                lists below to see a collection of my work.
+                I'm a passionate web developer from the true North who is always looking for the next challenge.
               </p>
             </div>
           </div>
@@ -87,18 +87,31 @@
       </div>
     </section>
     <section id="skills">
-      <h1>My Skills</h1> 
+      <h1>Skills</h1>
       <div class="container">
         <ul>
           <li>HTML5</li>
-        </ul>
-        <ul>
+
           <li>CSS3</li>
+
+          <li>JavaScript</li>
+
+          <li>PHP</li>
+
+          <li>C#</li>
+
+          <li>SQL</li>
+
+          <li>Python</li>
+
+          <li>Agile</li>
+
+          <li>SCRUM</li>
         </ul>
       </div>
     </section>
     <section id="work">
-      <h1>My Work</h1>
+      <h1>Work</h1>
       <div class="container">
         <div class="lists">
           <div class="lists__code">
@@ -107,7 +120,7 @@
               <li>
                 <a href="https://github.com/andrewsmith289/wp-encrypted-submission" target="_blank">
                   WordPress Encrypted User Submissions <i class="fas fa-external-link-alt"></i>
-                </a>ß
+                </a>
               </li>
               <li>
                 <a href="https://github.com/andrewsmith289/wp-python-pos" target="_blank">
